Fix T94715: multiple volumes using the same .vdb causes freeze

Needs more TBB task isolation, as even freeing an OpenVDB grid uses
multithreading.